--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
 
 
 *{
